...
        app:tabBackground="@drawable/dot_selector"
        app:tabGravity="center"
        app:tabIndicatorHeight="0dp"
        android:layout_marginVertical="@dimen/space_20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_get_started"
        />
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_get_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
...
        style="@style/StyleButtonGetStarted"
        android:textAppearance="@style/TextBody"
        android:layout_margin="@dimen/space_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_next_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        style="@style/StyleButtonGetStarted"
        android:layout_margin="@dimen/space_20dp"
        android:visibility="visible"
...
