<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/onboardingPresentationFragment"
        android:name="br.com.joaovitorqueiroz.footballapi.ui.home.presentation.view.OnboardingPresentationFragment"
        android:label="fragment_onboarding_presentation"
        tools:layout="@layout/fragment_onboarding_presentation" >
        <action
            android:id="@+id/action_onboardingPresentationFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true"
            app:popUpToSaveState="true"
            />
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="br.com.joaovitorqueiroz.footballapi.ui.home.presentation.view.HomeFragment"
        android:label="fragment_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/homeFragment_to_home_graph"
            app:destination="@id/home_graph" />
        <action
            android:id="@+id/action_homeFragment_to_matchFragment"
            app:destination="@id/matchFragment" />
    </fragment>
    <include app:graph="@navigation/home_graph" />
    <fragment
        android:id="@+id/matchFragment"
        android:name="br.com.joaovitorqueiroz.footballapi.ui.matchscreen.presentation.view.MatchFragment"
        android:label="fragment_match"
        tools:layout="@layout/fragment_match">
        <argument
            android:name="matchId"
            app:argType="long" />
    </fragment>

</navigation>